--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500;900&display=swap" rel="stylesheet">
     <!-- CSS link -->
     <link rel="stylesheet" href="style.css">
+    <!-- Favicon -->
+    <link rel="icon" href="images/favicon-32x32.png">
   </head>
 
   <body>
@@ -18,10 +20,10 @@
         <img src="images/logo.svg" alt="meet logo">
       </div>
       <section class="page-header">
+        <h1 class="big-heading">Group Chat <br>for Everyone</h1>
         <img class="desktop left-image" src="images/desktop/hero-left.png" alt="hero images on the left side">
         <img class="mobile" src="images/tablet/image-hero.png" alt="hero images on the middle side">
         <article class="container">
-          <h1 class="big-heading">Group Chat <br>for Everyone</h1>
           <p class="text">
             Meet makes it easy to connect with others face-to-face virtually
             and collaborate across any device.
@@ -36,6 +38,7 @@
     </header>
 
     <div class="section-break">
+      <h2 class="hidden">none</h2>
       <div class="line">
       </div>
       <div class="circle">
@@ -45,6 +48,7 @@
 
     <main class="wrapper">
       <section class="grid-container">
+        <h2 class="hidden">none</h2>
         <div class="column">
           <img class="grid-image" src="images/desktop/vidcal-woman.jpg" alt="an oldwoman sitting vidcall">
         </div>
@@ -70,6 +74,7 @@
     </main>
 
     <div class="section-break">
+      <h2 class="hidden">none</h2>
       <div class="line">
       </div>
       <div class="circle">
