--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <img class="desktop left-image" src="images/desktop/hero-left.png" alt="hero images on the left side">
         <img class="mobile" src="images/tablet/image-hero.png" alt="hero images on the middle side">
         <article class="container">
+          <h2 class="hidden">None</h2>
           <p class="text">
             Meet makes it easy to connect with others face-to-face virtually
             and collaborate across any device.
@@ -37,14 +38,14 @@
       </section>
     </header>
 
-    <div class="section-break">
+    <section class="section-break">
       <h2 class="hidden">none</h2>
       <div class="line">
       </div>
       <div class="circle">
         01
       </div>
-    </div>
+    </section>
 
     <main class="wrapper">
       <section class="grid-container">
@@ -73,14 +74,14 @@
       </section>
     </main>
 
-    <div class="section-break">
+    <section class="section-break">
       <h2 class="hidden">none</h2>
       <div class="line">
       </div>
       <div class="circle">
         02
       </div>
-    </div>
+    </section>
 
     <footer class="background1">
       <div class="background2">
