--- a/index.html
+++ b/index.html
@@ -42,9 +42,10 @@
       <h2 class="hidden">none</h2>
       <div class="line">
       </div>
-      <div class="circle">
+      <article class="circle">
+        <h2 class="hidden"></h2>
         01
-      </div>
+      </article>
     </section>
 
     <main class="wrapper">
@@ -78,9 +79,10 @@
       <h2 class="hidden">none</h2>
       <div class="line">
       </div>
-      <div class="circle">
+      <article class="circle">
+        <h2 class="hidden"></h2>
         02
-      </div>
+      </article>
     </section>
 
     <footer class="background1">
