--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <div class="line">
       </div>
       <article class="circle">
-        <h2 class="hidden"></h2>
+        <h2 class="hidden">None</h2>
         01
       </article>
     </section>
@@ -80,7 +80,7 @@
       <div class="line">
       </div>
       <article class="circle">
-        <h2 class="hidden"></h2>
+        <h2 class="hidden">none</h2>
         02
       </article>
     </section>
